--- a/.github/workflows/download-objektliste.yml
+++ b/.github/workflows/download-objektliste.yml
@@ -3,5 +3,6 @@
   id: download-objektliste
   with:
     file-url: 'https://odb.zh.ch/odbwiki/mediawiki/files/pdfs/objektliste_mit_PDF-Links.csv'
-- name: Print the file path
-    run: echo "The file was downloaded to ${{ steps.download-poetry.outputs.file-path }}"
+  on:
+    schedule:
+      - cron:  '0 12 * * *'
